terraformaws/eks/stationback/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stationback-ingress5
  namespace : stationback-deploy
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/group.name: "stationback-alb-app"
    alb.ingress.kubernetes.io/group.order: "1"
    alb.ingress.kubernetes.io/tags: Name=stationback-alb, Application=STATION
    alb.ingress.kubernetes.io/healthcheck-path: "/StationDemoSecureWeb/health"
    alb.ingress.kubernetes.io/listen-ports:   '[{"HTTP": 8080}]'
    external-dns.alpha.kubernetes.io/hostname: stationback.exakaconsulting.org
spec:
  backend:
    serviceName: stationbackservice
    servicePort: 8080
